--- a/gb/23/9/14/n14073585.md
+++ b/gb/23/9/14/n14073585.md
@@ -12,10 +12,6 @@
 <p>跨组获得大专组季军的王奕勋同学说，为了在实作的时候提高发电量作了调整，却忘了把固定螺丝锁好，测试时造浪力量惊人导致机组只能发挥三成左右的电力，原本以为得奖无望，没想到还能得到季军，体会到老师谆谆教诲要求每个环节都要符合科学精神，更珍惜这失而复得的奖励！</p>
 <p>教育处刘美兰处长表示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9F%BA%E9%9A%86.md#1">基隆</a>市专注落实海洋能源与环境教育，朝向绿能城市迈进。而安乐高中教学有成，发展出海洋文创设计、海洋能源实作、程式设计等多元选修课程，让学生在多项赛事脱颖而出。同时也感谢海洋大学在地长期对海洋环境与海洋人才的培育耕耘，让学校都能成为基隆海洋环境能源科技人才培育的摇篮！◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/12/3/2/n3528533.md#1">海大关心替代能源 研讨海洋生质能源产业</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/25/n12644884.md#1">帮助弱势及永续海洋环境 海科馆点亮爱心启航之灯</a></li>
@@ -24,40 +20,34 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/9/n13426321.md#1">推动能源教育标竿奖 基隆市隆圣国小夺银</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/9/n13755814.md#1">海大科研推动海洋永续 守护海洋环境与生态</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977044.md#1">废建材变藻礁 鸿海及海大投入永续海洋环境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073570.md#1">2023兰阳妈祖文化节 加码送潮帽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073465.md#1">中秋连假期间 基隆关持续提供通关便民服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072938.md#1">南澳乡传统技艺竞赛暨文化体验活动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105967.md#1">关山义消分队长周福安 当选为县义消楷模</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105350.md#1">关山工商慢垒队 勇夺总统杯冠军</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105339.md#1">达仁乡土坂部落maljeveq五年祭盛况空前</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9757183.md#1" target="_blank">杨宁： 中共谎言之“三三制政权共享”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069176.md#1">【未解之谜】2025年大巨变？深度解读《黄檗禅师诗》（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067845.md#1">【杨延昭传奇】乱世中的命定姻缘（中）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071125.md#1">【人物真相】尹锡悦 坚决抗共的亚洲政治强人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气养生小心哪些禁忌？“补露”怎么补？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062280.md#1">【古道人生】他找到了银矿发大财却无福消受</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073363.md#1">【新唐人快报】习9大决策错误 专家析背后3因素</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072992.md#1">【新闻大家谈】北京再爆秘事？官媒齐唱亡党曲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073261.md#1">【菁英论坛】习的安全恐惧来自中共末日危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071731.md#1">王友群：习近平目前面临的四大危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071239.md#1">多名高级将领失踪 习近平频隐身再遭聚焦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072035.md#1">袁红冰解读关于习近平的五个话题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071486.md#1">妮可基嫚曾说：嫁阿汤哥除了爱还可免受性骚扰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072404.md#1">邓超被曝罹患忧郁症？孙俪发文泄最新动态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071685.md#1">网友嫌眉笔价格贵 口红一哥李佳琦回怼惹众怒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071709.md#1">带30罐泡菜被海关没收 天心韩籍丈夫泪洒机场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071586.md#1">双亲已殁 爱犬也走了 方季惟台上泪喊只剩自己</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071559.md#1">吃梨一定要吃这部位！抗癌护心防糖尿病 功效强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071367.md#1">高龄95岁 日本前医生长寿和快乐的8个秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072032.md#1">专家：垃圾飘浮威胁太空旅行 但没人清理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066718.md#1">逃离孤独  5个方式让脆弱心灵变得勇敢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071212.md#1">4招煮出膨松好吃的藜麦 超级营养的快手餐</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/14/n14073585.htm">海洋能创意实作竞赛 基隆安乐高中迭创佳绩</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073585.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
